rework using only biz events